--- a/map/static/css/base.css
+++ b/map/static/css/base.css
@@ -107,7 +107,7 @@ input, textarea {
     clear:both;
     float:left;
     margin:0 0 10px;
-    background:#efefef;
+    background: #f1f97d;
     border:0;
     padding:6px 10px;
     font-size:14px;
