--- a/map/templates/base.html
+++ b/map/templates/base.html
@@ -10,7 +10,7 @@
     <div id="header">
         <div class="menu">
   <a class="active" href="/">Map</a>
-  <a href="/quiz">Challenge</a>
+  <a href="/quiz">Quiz</a>
   <a href="/library">Library</a>
   <a href="/edu/learn/">Courses</a>
   <input type="text" placeholder="Search.." style="float: right; font-size: 17px;">
